# itrace

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  ISA.md  README.md  TODO.md  pyproject.toml  tasks.yaml
data/: demo_gaze.csv  demo_pupil.csv
docs/: PREPUBLICATION_REVIEW.md  RESEARCH_BRIEF.md  SCHOLARSHIP_AUDIT.md  THERMO_NUCLEAR_AUDIT.md  TRACEABILITY_MATRIX.json  VALIDATION_PROTOCOLS.md  empirical_pilot_metrics.json  empirical_sessions_manifest.json  empirical_sessions_summary.json  figure_manifest.json  manual_annotation_protocol.md  verification_metrics.json
docs/releases/: v0.4.1.md
manuscript/: 00_abstract.md  01_introduction.md  02a_architecture.md  02b_geometry.md  02c_velocity_and_events.md  02d_dynamics_and_encoding.md  02e_pupillometry.md  02f_capture_shell.md  02g_forward_model.md  02h_noise_model_and_statistics.md  02i_descriptive_and_distribution_statistics.md  02j_advanced_detection_and_similarity.md  03_graphical_abstract.md  03a_ground_truth_recovery.md  03b_pupillometry_results.md  03c_closed_loop.md  03d_noise_sensitivity.md  03e_reproducibility.md  03ez_empirical_pilot.md  03f_figure_gallery.md  03g_scanpath_and_temporal.md  04_discussion.md  05_limitations.md  06_conclusion.md  README.md  S01_statistical_methods.md  S02_software_architecture.md  _build.md  _build.tex  _build.txt  _render_preamble.tex  config.yaml  preamble.md  references.bib
output/: report.json  synthetic_validation.json  webcam_capture_records.csv  webcam_gaze.csv  webcam_pupil.csv  webcam_report.json
output/figures/: noise_metrics.json  noise_summary.md  statistical_diagnostics.json  statistical_interpretation_ledger.json  synthetic_empirical_range_bridge.json
output/live-html/: live_capture_records.csv  live_gaze.csv  live_pupil.csv  live_report.json
scripts/: aggregate_empirical_sessions.py  audit_crossrefs.py  generate_figures.py  generate_graphical_abstract.py  generate_loop_animation.py  generate_orbs_animation.py  generate_power_figure.py  render_manuscript.py  summarize_empirical_pilot.py
src/itrace/: __init__.py  benchmark.py  calibration.py  capture.py  cli.py  config.py  dashboard.py  detection.py  empirical.py  encoding.py  experiments.py  eyemodel.py  geometry.py  io.py  live.py  mainsequence.py  pipeline.py  power.py  pupil.py  pupilphase.py  pupilseg.py  reporting.py  saccades.py  scene.py  synthetic.py  types.py  validation.py  velocity.py  version.py
src/itrace/live/: __init__.py  analysis.py  server.py  state.py
src/itrace/stats/: __init__.py  bootstrap.py  descriptive.py  diagnostics.py  distributions.py  events.py  evidence.py  range_bridge.py  scanpath_metrics.py  similarity.py  timeseries.py
src/itrace/viz/: __init__.py  dashboard.py  distributions.py  evidence.py  gallery.py  palette.py  quality.py  range_bridge.py  scanpath.py  spatial.py  statistics.py  timeline.py  traces.py
src/itrace/web_static/: app.css  app.js  index.html
tests/: conftest.py  test_benchmark.py  test_calibration.py  test_capture.py  test_capture_backend_conformance.py  test_cli.py  test_cli_stats_figures.py  test_cli_todo_sprint.py  test_config.py  test_dashboard.py  test_detection.py  test_documentation_traceability.py  test_empirical_sessions.py  test_encoding.py  test_experiments.py  test_eyemodel.py  test_figures.py  test_geometry.py  test_live_html.py  test_loop_animation.py  test_mainsequence.py  test_manuscript_integrity.py  test_orbs_power_figures.py  test_package.py  test_pipeline_io.py  test_power.py  test_pupil.py  test_pupilphase.py  test_pupilseg.py  test_range_bridge.py  test_report_validation.py  test_saccades.py  test_scene.py  test_statistical_evidence.py  test_stats_descriptive.py  test_stats_diagnostics.py  test_stats_distributions.py  test_stats_events.py  test_stats_scanpath_metrics.py  test_stats_similarity.py  (+14 more)
tests/fixtures/: reference_impl.py
tests/fixtures/calibration/: calibrated_vs_uncalibrated_points.csv  (+1 more)
(+1 files in other folders)
